// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check upath (unbind) join [ 'some/nodejs/deep', '../path' ] 1`] = `"some/nodejs/path"`;

exports[`check upath (unbind) join [ 'some/nodejs\\\\windows', '../path' ] 1`] = `"some/nodejs/path"`;

exports[`check upath (unbind) join [ 'some\\\\windows\\\\only', '..\\\\path' ] 1`] = `"some/windows/path"`;

exports[`check upath (unbind) normalize '//\\\\windows\\\\..\\\\unix/mixed/' 1`] = `"/unix/mixed/"`;

exports[`check upath (unbind) normalize '/root/of/unix/somefile.ext' 1`] = `"/root/of/unix/somefile.ext"`;

exports[`check upath (unbind) normalize 'c:/windows/../nodejs/path' 1`] = `"c:/nodejs/path"`;

exports[`check upath (unbind) normalize 'c:/windows/nodejs/path' 1`] = `"c:/windows/nodejs/path"`;

exports[`check upath (unbind) normalize 'c:\\\\Windows\\\\Directory\\\\somefile.ext' 1`] = `"c:/Windows/Directory/somefile.ext"`;

exports[`check upath (unbind) normalize 'c:\\\\windows\\\\..\\\\nodejs\\\\path' 1`] = `"c:/nodejs/path"`;

exports[`check upath (unbind) normalize 'c:\\\\windows\\\\nodejs\\\\path' 1`] = `"c:/windows/nodejs/path"`;

exports[`check upath (unbind) parse '//\\\\windows\\\\..\\\\unix/mixed/' 1`] = `
Object {
  "base": "mixed",
  "dir": "/unix",
  "ext": "",
  "name": "mixed",
  "root": "/",
}
`;

exports[`check upath (unbind) parse '//windows\\\\unix/mixed' 1`] = `
Object {
  "base": "mixed",
  "dir": "\\\\\\\\windows\\\\unix\\\\",
  "ext": "",
  "name": "mixed",
  "root": "\\\\\\\\windows\\\\unix\\\\",
}
`;

exports[`check upath (unbind) parse '/root/of/unix/somefile.ext' 1`] = `
Object {
  "base": "somefile.ext",
  "dir": "/root/of/unix",
  "ext": ".ext",
  "name": "somefile",
  "root": "/",
}
`;

exports[`check upath (unbind) parse '\\\\windows//unix/mixed' 1`] = `
Object {
  "base": "mixed",
  "dir": "/windows/unix",
  "ext": "",
  "name": "mixed",
  "root": "/",
}
`;

exports[`check upath (unbind) parse 'c:/windows/../nodejs/path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check upath (unbind) parse 'c:/windows/nodejs/path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/windows/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check upath (unbind) parse 'c:\\\\Windows\\\\Directory\\\\somefile.ext' 1`] = `
Object {
  "base": "somefile.ext",
  "dir": "c:/Windows/Directory",
  "ext": ".ext",
  "name": "somefile",
  "root": "c:/",
}
`;

exports[`check upath (unbind) parse 'c:\\\\windows\\\\..\\\\nodejs\\\\path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check upath (unbind) parse 'c:\\\\windows\\\\nodejs\\\\path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/windows/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check upath join [ 'some/nodejs/deep', '../path' ] 1`] = `"some/nodejs/path"`;

exports[`check upath join [ 'some/nodejs\\\\windows', '../path' ] 1`] = `"some/nodejs/path"`;

exports[`check upath join [ 'some\\\\windows\\\\only', '..\\\\path' ] 1`] = `"some/windows/path"`;

exports[`check upath normalize '//\\\\windows\\\\..\\\\unix/mixed/' 1`] = `"/unix/mixed/"`;

exports[`check upath normalize '/root/of/unix/somefile.ext' 1`] = `"/root/of/unix/somefile.ext"`;

exports[`check upath normalize 'c:/windows/../nodejs/path' 1`] = `"c:/nodejs/path"`;

exports[`check upath normalize 'c:/windows/nodejs/path' 1`] = `"c:/windows/nodejs/path"`;

exports[`check upath normalize 'c:\\\\Windows\\\\Directory\\\\somefile.ext' 1`] = `"c:/Windows/Directory/somefile.ext"`;

exports[`check upath normalize 'c:\\\\windows\\\\..\\\\nodejs\\\\path' 1`] = `"c:/nodejs/path"`;

exports[`check upath normalize 'c:\\\\windows\\\\nodejs\\\\path' 1`] = `"c:/windows/nodejs/path"`;

exports[`check upath parse '//\\\\windows\\\\..\\\\unix/mixed/' 1`] = `
Object {
  "base": "mixed",
  "dir": "/unix",
  "ext": "",
  "name": "mixed",
  "root": "/",
}
`;

exports[`check upath parse '//windows\\\\unix/mixed' 1`] = `
Object {
  "base": "mixed",
  "dir": "\\\\\\\\windows\\\\unix\\\\",
  "ext": "",
  "name": "mixed",
  "root": "\\\\\\\\windows\\\\unix\\\\",
}
`;

exports[`check upath parse '/root/of/unix/somefile.ext' 1`] = `
Object {
  "base": "somefile.ext",
  "dir": "/root/of/unix",
  "ext": ".ext",
  "name": "somefile",
  "root": "/",
}
`;

exports[`check upath parse '\\\\windows//unix/mixed' 1`] = `
Object {
  "base": "mixed",
  "dir": "/windows/unix",
  "ext": "",
  "name": "mixed",
  "root": "/",
}
`;

exports[`check upath parse 'c:/windows/../nodejs/path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check upath parse 'c:/windows/nodejs/path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/windows/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check upath parse 'c:\\\\Windows\\\\Directory\\\\somefile.ext' 1`] = `
Object {
  "base": "somefile.ext",
  "dir": "c:/Windows/Directory",
  "ext": ".ext",
  "name": "somefile",
  "root": "c:/",
}
`;

exports[`check upath parse 'c:\\\\windows\\\\..\\\\nodejs\\\\path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check upath parse 'c:\\\\windows\\\\nodejs\\\\path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/windows/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check upath2 (unbind) join [ 'some/nodejs/deep', '../path' ] 1`] = `"some/nodejs/path"`;

exports[`check upath2 (unbind) join [ 'some/nodejs\\\\windows', '../path' ] 1`] = `"some/nodejs/path"`;

exports[`check upath2 (unbind) join [ 'some\\\\windows\\\\only', '..\\\\path' ] 1`] = `"some/windows/path"`;

exports[`check upath2 (unbind) normalize '//\\\\windows\\\\..\\\\unix/mixed/' 1`] = `"/unix/mixed/"`;

exports[`check upath2 (unbind) normalize '/root/of/unix/somefile.ext' 1`] = `"/root/of/unix/somefile.ext"`;

exports[`check upath2 (unbind) normalize 'c:/windows/../nodejs/path' 1`] = `"c:/nodejs/path"`;

exports[`check upath2 (unbind) normalize 'c:/windows/nodejs/path' 1`] = `"c:/windows/nodejs/path"`;

exports[`check upath2 (unbind) normalize 'c:\\\\Windows\\\\Directory\\\\somefile.ext' 1`] = `"c:/Windows/Directory/somefile.ext"`;

exports[`check upath2 (unbind) normalize 'c:\\\\windows\\\\..\\\\nodejs\\\\path' 1`] = `"c:/nodejs/path"`;

exports[`check upath2 (unbind) normalize 'c:\\\\windows\\\\nodejs\\\\path' 1`] = `"c:/windows/nodejs/path"`;

exports[`check upath2 (unbind) parse '//\\\\windows\\\\..\\\\unix/mixed/' 1`] = `
Object {
  "base": "mixed",
  "dir": "/unix",
  "ext": "",
  "name": "mixed",
  "root": "/",
}
`;

exports[`check upath2 (unbind) parse '//windows\\\\unix/mixed' 1`] = `
Object {
  "base": "mixed",
  "dir": "\\\\\\\\windows\\\\unix\\\\",
  "ext": "",
  "name": "mixed",
  "root": "\\\\\\\\windows\\\\unix\\\\",
}
`;

exports[`check upath2 (unbind) parse '/root/of/unix/somefile.ext' 1`] = `
Object {
  "base": "somefile.ext",
  "dir": "/root/of/unix",
  "ext": ".ext",
  "name": "somefile",
  "root": "/",
}
`;

exports[`check upath2 (unbind) parse '\\\\windows//unix/mixed' 1`] = `
Object {
  "base": "mixed",
  "dir": "/windows/unix",
  "ext": "",
  "name": "mixed",
  "root": "/",
}
`;

exports[`check upath2 (unbind) parse 'c:/windows/../nodejs/path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check upath2 (unbind) parse 'c:/windows/nodejs/path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/windows/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check upath2 (unbind) parse 'c:\\\\Windows\\\\Directory\\\\somefile.ext' 1`] = `
Object {
  "base": "somefile.ext",
  "dir": "c:/Windows/Directory",
  "ext": ".ext",
  "name": "somefile",
  "root": "c:/",
}
`;

exports[`check upath2 (unbind) parse 'c:\\\\windows\\\\..\\\\nodejs\\\\path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check upath2 (unbind) parse 'c:\\\\windows\\\\nodejs\\\\path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/windows/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check upath2 join [ 'some/nodejs/deep', '../path' ] 1`] = `"some/nodejs/path"`;

exports[`check upath2 join [ 'some/nodejs\\\\windows', '../path' ] 1`] = `"some/nodejs/path"`;

exports[`check upath2 join [ 'some\\\\windows\\\\only', '..\\\\path' ] 1`] = `"some/windows/path"`;

exports[`check upath2 normalize '//\\\\windows\\\\..\\\\unix/mixed/' 1`] = `"/unix/mixed/"`;

exports[`check upath2 normalize '/root/of/unix/somefile.ext' 1`] = `"/root/of/unix/somefile.ext"`;

exports[`check upath2 normalize 'c:/windows/../nodejs/path' 1`] = `"c:/nodejs/path"`;

exports[`check upath2 normalize 'c:/windows/nodejs/path' 1`] = `"c:/windows/nodejs/path"`;

exports[`check upath2 normalize 'c:\\\\Windows\\\\Directory\\\\somefile.ext' 1`] = `"c:/Windows/Directory/somefile.ext"`;

exports[`check upath2 normalize 'c:\\\\windows\\\\..\\\\nodejs\\\\path' 1`] = `"c:/nodejs/path"`;

exports[`check upath2 normalize 'c:\\\\windows\\\\nodejs\\\\path' 1`] = `"c:/windows/nodejs/path"`;

exports[`check upath2 parse '//\\\\windows\\\\..\\\\unix/mixed/' 1`] = `
Object {
  "base": "mixed",
  "dir": "/unix",
  "ext": "",
  "name": "mixed",
  "root": "/",
}
`;

exports[`check upath2 parse '//windows\\\\unix/mixed' 1`] = `
Object {
  "base": "mixed",
  "dir": "\\\\\\\\windows\\\\unix\\\\",
  "ext": "",
  "name": "mixed",
  "root": "\\\\\\\\windows\\\\unix\\\\",
}
`;

exports[`check upath2 parse '/root/of/unix/somefile.ext' 1`] = `
Object {
  "base": "somefile.ext",
  "dir": "/root/of/unix",
  "ext": ".ext",
  "name": "somefile",
  "root": "/",
}
`;

exports[`check upath2 parse '\\\\windows//unix/mixed' 1`] = `
Object {
  "base": "mixed",
  "dir": "/windows/unix",
  "ext": "",
  "name": "mixed",
  "root": "/",
}
`;

exports[`check upath2 parse 'c:/windows/../nodejs/path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check upath2 parse 'c:/windows/nodejs/path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/windows/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check upath2 parse 'c:\\\\Windows\\\\Directory\\\\somefile.ext' 1`] = `
Object {
  "base": "somefile.ext",
  "dir": "c:/Windows/Directory",
  "ext": ".ext",
  "name": "somefile",
  "root": "c:/",
}
`;

exports[`check upath2 parse 'c:\\\\windows\\\\..\\\\nodejs\\\\path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check upath2 parse 'c:\\\\windows\\\\nodejs\\\\path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/windows/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check win32 (unbind) join [ 'some/nodejs/deep', '../path' ] 1`] = `"some/nodejs/path"`;

exports[`check win32 (unbind) join [ 'some/nodejs\\\\windows', '../path' ] 1`] = `"some/nodejs/path"`;

exports[`check win32 (unbind) join [ 'some\\\\windows\\\\only', '..\\\\path' ] 1`] = `"some/windows/path"`;

exports[`check win32 (unbind) normalize '//\\\\windows\\\\..\\\\unix/mixed/' 1`] = `"/unix/mixed/"`;

exports[`check win32 (unbind) normalize '/root/of/unix/somefile.ext' 1`] = `"/root/of/unix/somefile.ext"`;

exports[`check win32 (unbind) normalize 'c:/windows/../nodejs/path' 1`] = `"c:/nodejs/path"`;

exports[`check win32 (unbind) normalize 'c:/windows/nodejs/path' 1`] = `"c:/windows/nodejs/path"`;

exports[`check win32 (unbind) normalize 'c:\\\\Windows\\\\Directory\\\\somefile.ext' 1`] = `"c:/Windows/Directory/somefile.ext"`;

exports[`check win32 (unbind) normalize 'c:\\\\windows\\\\..\\\\nodejs\\\\path' 1`] = `"c:/nodejs/path"`;

exports[`check win32 (unbind) normalize 'c:\\\\windows\\\\nodejs\\\\path' 1`] = `"c:/windows/nodejs/path"`;

exports[`check win32 (unbind) parse '//\\\\windows\\\\..\\\\unix/mixed/' 1`] = `
Object {
  "base": "mixed",
  "dir": "/unix",
  "ext": "",
  "name": "mixed",
  "root": "/",
}
`;

exports[`check win32 (unbind) parse '//windows\\\\unix/mixed' 1`] = `
Object {
  "base": "mixed",
  "dir": "\\\\\\\\windows\\\\unix\\\\",
  "ext": "",
  "name": "mixed",
  "root": "\\\\\\\\windows\\\\unix\\\\",
}
`;

exports[`check win32 (unbind) parse '/root/of/unix/somefile.ext' 1`] = `
Object {
  "base": "somefile.ext",
  "dir": "/root/of/unix",
  "ext": ".ext",
  "name": "somefile",
  "root": "/",
}
`;

exports[`check win32 (unbind) parse '\\\\windows//unix/mixed' 1`] = `
Object {
  "base": "mixed",
  "dir": "/windows/unix",
  "ext": "",
  "name": "mixed",
  "root": "/",
}
`;

exports[`check win32 (unbind) parse 'c:/windows/../nodejs/path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check win32 (unbind) parse 'c:/windows/nodejs/path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/windows/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check win32 (unbind) parse 'c:\\\\Windows\\\\Directory\\\\somefile.ext' 1`] = `
Object {
  "base": "somefile.ext",
  "dir": "c:/Windows/Directory",
  "ext": ".ext",
  "name": "somefile",
  "root": "c:/",
}
`;

exports[`check win32 (unbind) parse 'c:\\\\windows\\\\..\\\\nodejs\\\\path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check win32 (unbind) parse 'c:\\\\windows\\\\nodejs\\\\path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/windows/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check win32 join [ 'some/nodejs/deep', '../path' ] 1`] = `"some/nodejs/path"`;

exports[`check win32 join [ 'some/nodejs\\\\windows', '../path' ] 1`] = `"some/nodejs/path"`;

exports[`check win32 join [ 'some\\\\windows\\\\only', '..\\\\path' ] 1`] = `"some/windows/path"`;

exports[`check win32 normalize '//\\\\windows\\\\..\\\\unix/mixed/' 1`] = `"/unix/mixed/"`;

exports[`check win32 normalize '/root/of/unix/somefile.ext' 1`] = `"/root/of/unix/somefile.ext"`;

exports[`check win32 normalize 'c:/windows/../nodejs/path' 1`] = `"c:/nodejs/path"`;

exports[`check win32 normalize 'c:/windows/nodejs/path' 1`] = `"c:/windows/nodejs/path"`;

exports[`check win32 normalize 'c:\\\\Windows\\\\Directory\\\\somefile.ext' 1`] = `"c:/Windows/Directory/somefile.ext"`;

exports[`check win32 normalize 'c:\\\\windows\\\\..\\\\nodejs\\\\path' 1`] = `"c:/nodejs/path"`;

exports[`check win32 normalize 'c:\\\\windows\\\\nodejs\\\\path' 1`] = `"c:/windows/nodejs/path"`;

exports[`check win32 parse '//\\\\windows\\\\..\\\\unix/mixed/' 1`] = `
Object {
  "base": "mixed",
  "dir": "/unix",
  "ext": "",
  "name": "mixed",
  "root": "/",
}
`;

exports[`check win32 parse '//windows\\\\unix/mixed' 1`] = `
Object {
  "base": "mixed",
  "dir": "\\\\\\\\windows\\\\unix\\\\",
  "ext": "",
  "name": "mixed",
  "root": "\\\\\\\\windows\\\\unix\\\\",
}
`;

exports[`check win32 parse '/root/of/unix/somefile.ext' 1`] = `
Object {
  "base": "somefile.ext",
  "dir": "/root/of/unix",
  "ext": ".ext",
  "name": "somefile",
  "root": "/",
}
`;

exports[`check win32 parse '\\\\windows//unix/mixed' 1`] = `
Object {
  "base": "mixed",
  "dir": "/windows/unix",
  "ext": "",
  "name": "mixed",
  "root": "/",
}
`;

exports[`check win32 parse 'c:/windows/../nodejs/path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check win32 parse 'c:/windows/nodejs/path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/windows/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check win32 parse 'c:\\\\Windows\\\\Directory\\\\somefile.ext' 1`] = `
Object {
  "base": "somefile.ext",
  "dir": "c:/Windows/Directory",
  "ext": ".ext",
  "name": "somefile",
  "root": "c:/",
}
`;

exports[`check win32 parse 'c:\\\\windows\\\\..\\\\nodejs\\\\path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;

exports[`check win32 parse 'c:\\\\windows\\\\nodejs\\\\path' 1`] = `
Object {
  "base": "path",
  "dir": "c:/windows/nodejs",
  "ext": "",
  "name": "path",
  "root": "c:/",
}
`;
